--- a/refinery/ui/source/styles/refinery-style.less
+++ b/refinery/ui/source/styles/refinery-style.less
@@ -2030,3 +2030,16 @@ a.modal-close {
 .no-decoration-link {
   text-decoration: none !important;
 }
+
+.scrollable-list {
+  overflow-y: scroll;
+  &::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+  }
+  &::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0,0,0,.3);
+    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+  }
+}
